Chapter13/sample-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-fsgroup
spec:
  secrityContext:
    fsGroup: 1001
  containers:
    - image: nginx:1.12
      name: nginx-container
      volumeMounts:
      - mountPath: /cache
        name: cache-volume
    volumes:
    - name: cache-volume
      emptyDir: {}
