Chapter13/sample-serviceaccount-pullsecret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pullsecret-pod
spec:
  serviceAccountName: sample-serviceaccount-pullsecret
  containers:
    - name: nginx-container
      image: nginx:1.12
