Chapter13/sample-sysctl-old.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-sysctl-old
spec:
  contianers:
    - name: centos-container
      image: centos:7
      command: ["/bin/sleep","3600"]
